--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>s-w-g</title>
+    <link rel="icon" type="image/x-icon" href="favicon.png" />
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
